--- a/styles/home.css
+++ b/styles/home.css
@@ -1,17 +1,28 @@
-
+div.search-results, div.all-articles {
+  display: flex;
+  gap: 1rem;
+}
 
 section.article-preview {
   width: 15rem;
+  height: 25rem;
   border: solid 2px gray;
-  border-radius: 2rem;
+  border-radius: 20px;
   padding: 0 1rem 1rem;
+  position: relatvie;
+}
+
+section.article-preview img {
+  height: 6rem;
 }
 
 section.article-preview p {
-  max-height: 5.5rem;
+  max-height: 5.75rem;
   overflow-y: hidden;
+  margin-bottom: 2rem;
 }
 
-section.article-preview a {
-
+section.article-preview p.ellipsis {
+  position: absolute;
+  top: 22.5rem;
 }
