--- a/styles/default.css
+++ b/styles/default.css
@@ -44,6 +44,35 @@ main {
   min-height: 85vh;
 }
 
+div.search-results, div.all-articles {
+  display: flex;
+  gap: 1rem;
+}
+
+section.article-preview {
+  width: 15rem;
+  height: 25rem;
+  border: solid 2px gray;
+  border-radius: 20px;
+  padding: 0 1rem 1rem;
+  position: relatvie;
+}
+
+section.article-preview img {
+  height: 6rem;
+}
+
+section.article-preview p {
+  max-height: 5.75rem;
+  overflow-y: hidden;
+  margin-bottom: 2rem;
+}
+
+section.article-preview p.ellipsis {
+  position: absolute;
+  top: 22.5rem;
+}
+
 footer {
   height: 5vh;
   text-align: center;
