--- a/styles/default.css
+++ b/styles/default.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto";
   font-size: 1.25rem;
   min-height: 100vh;
   padding: 0 1rem;
