--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,7 @@
 section.article-preview {
   width: 18rem;
   height: 25rem;
-  border: solid 2px gray;
+  border: solid 2px var(--navy-blue);
   border-radius: 20px;
   padding: 0 1rem 1rem;
   position: relatvie;
