--- a/styles/default.css
+++ b/styles/default.css
@@ -17,7 +17,7 @@ header {
   align-items: center;
   height: 10vh;
   background: var(--ivory);
-  padding: 1rem;
+  padding: 2rem 1rem 1rem;
   border-radius: 0 0 16px 16px;
   color: white;
 }
