--- a/styles/default.css
+++ b/styles/default.css
@@ -137,3 +137,9 @@ footer div ul {
 .dark a:hover {
   color: var(--navy-blue);
 }
+
+@media screen and (max-width: 800px) {
+  body * {
+    max-width: 100vw;
+  }
+}
