--- a/styles/home.css
+++ b/styles/home.css
@@ -36,33 +36,32 @@ div.article-card p {
     margin: 0;
     width: 100vw;
     height: fit-content;
-    border: solid red 1px;
   }
 
   header {
     width: 100vw;
-    border: solid red 1px;
     padding: 0;
     margin: 0;
     overflow-y: hidden;
   }
 
   header img {
-    border: solid red 1px;
     width: 200px;
     height: auto;
     margin: 0;
   }
 
-  h2 {
-    font-size: 1rem;
-  }
-
   footer .font-2rem {
     font-size: 1rem;
   }
+
+  h2 {
+    font-size: 1.25rem;
+  }
   
   section {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
   }
 }
