--- a/styles/home.css
+++ b/styles/home.css
@@ -5,6 +5,14 @@ main {
 h2 {
   margin-left: 1rem;
 }
+
+section.all-articles {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  padding: 0 1rem 1rem;
+}
+
 div.article-card {
   width: 18rem;
   height: 20rem;
@@ -31,29 +39,7 @@ div.article-card p {
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    padding: 0;
-    margin: 0;
-    width: 100vw;
-    height: fit-content;
-  }
-
-  header {
-    width: 100vw;
-    padding: 0;
-    margin: 0;
-    overflow-y: hidden;
-  }
-
-  header img {
-    width: 200px;
-    height: auto;
-    margin: 0;
-  }
-
-  footer .font-2rem {
-    font-size: 1rem;
-  }
+  
 
   h2 {
     font-size: 1.25rem;
