--- a/styles/default.css
+++ b/styles/default.css
@@ -20,6 +20,77 @@ body {
   padding: 0;
   margin: 0;
 }
+body.dark {
+  background: rgb(12, 12, 12);
+}
+
+div.toggle-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+p.light-label {
+  color: #d5d4d8;
+}
+body.dark p.light-label {
+  color: white;
+}
+
+p.dark-label {
+  color: #2b283a;
+}
+body.dark p.dark-label {
+  color: #918e9b;
+}
+
+
+label.switch {
+  position: relative;
+  width: 3rem;
+  height: 1rem;
+  padding: 0.25rem;
+  display: inline-block;
+}
+label.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+span.slider {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #2b283a;
+  border-radius: 34px;
+}
+span.slider::before {
+  content: "";
+  position: absolute;
+  left: 0.25rem;
+  bottom: 0.25rem;
+  width: 1rem;
+  height: 1rem;
+  background-color: white;
+  -webkit-transition: var(--duration);
+  transition: var(--duration);
+  border-radius: 50%;
+}
+input:checked + span.slider {
+  background-color: #f5f5f5;
+}
+label.switch > input:checked + span.slider::before {
+  background-color: #2b283a;
+  -webkit-transform: translateX(2rem);
+  -ms-transform: translateX(2rem);
+  transform: translateX(2rem);
+}
+
 header {
   display: flex;
   align-items: center;
