--- a/components/header.html
+++ b/components/header.html
@@ -3,6 +3,17 @@
         <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
     </h1>
 
+    <div class='toggle-container'>
+        <p class='light-label'>Light</p>
+  
+        <label class='switch'>
+            <input id='toggle-switch' type='checkbox'>
+            <span class='slider'></span>
+        </label>
+  
+        <p class='dark-label'>Dark</p>
+      </div>
+
     <form class="search">
         <input class="search" type="text" placeholder="search">
         <input type="submit" value="">
