--- a/styles/default.css
+++ b/styles/default.css
@@ -162,6 +162,13 @@ h3.search-results {
   margin-bottom: 1rem;
 }
 
+div.search-results {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 0 1rem 1rem;
+}
+
 div.article-card {
   width: 18rem;
   height: 20rem;
@@ -211,6 +218,19 @@ section.search-results button {
   position: absolute;
   top: 0;
   right: 1rem;
+  width: fit-content;
+  height: fit-content;
+  width: 3rem;
+  height: 3rem;
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: none;
+  border: none;
+}
+
+section.search-results button i {
+  width: 100%;
+  height: 100%;
 }
 
 footer {
